--- a/proplanr-repeat.html
+++ b/proplanr-repeat.html
@@ -1,11 +1,13 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-component-page/iron-component-page.html">
-<link rel="import" href="iron-form/iron-form.html">
-<link rel="import" href="paper-input/paper-input.html">
-<link rel="import" href="paper-button/paper-button.html">
-<link rel="import" href="paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="paper-menu/paper-menu.html">
-<link rel="import" href="paper-item/paper-item.html">
+<link rel="import" href="../iron-form/iron-form.html">
+<link rel="import" href="../paper-input/paper-input.html">
+<link rel="import" href="../paper-button/paper-button.html">
+<link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../paper-menu/paper-menu.html">
+<link rel="import" href="../paper-item/paper-item.html">
+<link rel="import" href="../paper-listbox/paper-listbox.html">
+<link rel="import" href="../paper-checkbox/paper-checkbox.html">
 <!--
 
 Element providing repeating action similiar to Google Calendar Repeat.. Event.
@@ -49,7 +51,7 @@ Custom property | Description | Default
             <paper-item value="yearly">Yearly</paper-item>
           </paper-listbox>
         </paper-dropdown-menu>
-        <input type="text" name="every" label="Repeate Every"><span value$={{repeatType}}></span>
+        <input type="text" name="every" label="Repeate Every"><span value$={{"repeatType"}}></span>
         <input type="checkbox" name="donuts" checked> I like donuts<br>
         <paper-checkbox name="cheese" value="yes" checked></paper-checkbox>
       </form>
