--- a/proplanr-repeat.html
+++ b/proplanr-repeat.html
@@ -7,7 +7,9 @@
 <link rel="import" href="../paper-item/paper-item.html">
 <link rel="import" href="../paper-listbox/paper-listbox.html">
 <link rel="import" href="../paper-checkbox/paper-checkbox.html">
+<link rel="import" href="../vaadin-material-theme/vaadin-date-picker.html">
 <link rel="import" href="../vaadin-date-picker/vaadin-date-picker.html">
+
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 
 <!--
