--- a/proplanr-repeat.html
+++ b/proplanr-repeat.html
@@ -170,15 +170,15 @@
         /**
         * Repeats options: (Daily, Weekly, Monthly, Quarterly, Yearly.*/
         
-        endsOn: {
-          type: String,
-          notify: true
-        },
+        // endsOn: {
+        //   type: String,
+        //   notify: true
+        // },
         
-        endsAfter: {
-          type: Number,
-          notify: true
-        },
+        // endsAfter: {
+        //   type: Number,
+        //   notify: true
+        // },
 
         /* repeatData Object: title, repeat_frequence, repeat_every, start_on, ends, end_on, after_occurrences
         */
