Change to shadow

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 	<script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 	<script>
       window.Polymer = {
-        dom: 'shady',
+        dom: 'shadow',
         lazyRegister: true
       };
     </script>
