saves to firebase, can make multiple actions based on # of days

--- a/demo/index.html
+++ b/demo/index.html
@@ -41,7 +41,7 @@
 					api-key="AIzaSyA4Aumq3MnXjuH68ZYVjCsUJpymSrbKodk">
 				</firebase-app>
 
-				<proplanr-repeat-firebase app-name="proplanr-repeat"></proplanr-repeat-firebase>
+				<proplanr-repeat-firebase></proplanr-repeat-firebase>
 			</template>
 		</demo-snippet>
 	</div>
