--- a/proplanr-repeat-firebase.html
+++ b/proplanr-repeat-firebase.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../polymerfire/firebase-query.html">
 <link rel="import" href="../polymerfire/firebase-document.html">
 <link rel="import" href="../moment-element/moment-element.html">
+<link rel="import" href="../twix/dist/twix.js">
 <link rel="import" href="./proplanr-repeat.html">
 
 <dom-module id="proplanr-repeat-firebase">
@@ -67,11 +68,15 @@
             let every = repeat.repeat_every;
             this.saveActions(every,repeat,repeat_key);
           } else if(repeat.ends === 'on') {
-            
-          }
-
-          else {
-            console.log("end on");
+            // var dateRange = moment(repeat.start_on).twix(repeat.end_on);
+            let start = moment(repeat.start_on);
+            let end = moment(repeat.end_on).add(1, repeat.repeat_frequence);
+            let calculate = end.diff(start, repeat.repeat_frequence);
+            repeat.after_occurrences = calculate / repeat.repeat_every;
+            console.log(repeat.after_occurrences);
+            this.saveActions(repeat.repeat_every, repeat, repeat_key);
+          } else {
+            console.log("nothing");
           }     
         });
       },
@@ -90,6 +95,10 @@
           });
           console.log(due_date);
         }
+      },
+
+      reurrenceCalculator: function(repeat, every) {
+        
       }
     });
 
