--- a/proplanr-repeat-firebase.html
+++ b/proplanr-repeat-firebase.html
@@ -73,7 +73,6 @@
             let end = moment(repeat.end_on).add(1, repeat.repeat_frequence);
             let calculate = end.diff(start, repeat.repeat_frequence);
             repeat.after_occurrences = calculate / repeat.repeat_every;
-            console.log(repeat.after_occurrences);
             this.saveActions(repeat.repeat_every, repeat, repeat_key);
           } else {
             console.log("nothing");
@@ -87,7 +86,7 @@
           if (i > 0) {
             due_date = moment(due_date).add(every, repeat.repeat_frequence);
           }
-          console.log(repeat.title, due_date.toLocaleString(), repeat_key)
+          // console.log(repeat.title, due_date.toLocaleString(), repeat_key)
           this.db.ref('/actions').push({
             repeat_key: repeat_key,
             title: repeat.title,
