--- a/proplanr-repeat-firebase.html
+++ b/proplanr-repeat-firebase.html
@@ -73,7 +73,11 @@
             let end = moment(repeat.end_on).add(1, repeat.repeat_frequence);
             let calculate = end.diff(start, repeat.repeat_frequence);
             repeat.after_occurrences = calculate / repeat.repeat_every;
+            this.db.ref('/repeats/' + repeat_key).update({
+              after_occurrences: calculate / repeat.repeat_every,
+            });
             this.saveActions(repeat.repeat_every, repeat, repeat_key);
+            // save 
           } else {
             console.log("nothing");
           }     
