--- a/demo/proplanr-repeat-list-firebase.html
+++ b/demo/proplanr-repeat-list-firebase.html
@@ -7,7 +7,7 @@
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <script>
       window.Polymer = {
-        dom: 'shady',
+        dom: 'shadow',
         lazyRegister: true
       };
     </script>
