--- a/proplanr-repeat.html
+++ b/proplanr-repeat.html
@@ -122,7 +122,7 @@
     
     <h2>ProPlanr-repeat default: [[repeats]]!</h2>
     <iron-form>
-      <form method="get" action="/form/handler">
+      <form id="repeatForm" method="get" action="/form/handler">
         <paper-input id="titleInput" value="{{repeatData.title}}" label="Title"></paper-input> 
         <paper-dropdown-menu label="Repeat">
           <paper-listbox class="dropdown-content" slot="dropdown-content" selected="{{repeatData.repeat_frequence}}"  attr-for-selected="value">
@@ -193,7 +193,12 @@
             return {};
           }
         },
-
+        layout: {
+          type: String,
+          value: 'Vertical',
+          notify: true,
+          observer: 'layoutChange'
+        },
         today: {
           type: String
         }
@@ -276,7 +281,11 @@
             this.set('repeatData.end_on', "");
           }
         },1);
-      }
+      },
+
+      layoutChange: function(layout) {
+        console.log('layoutChange:',layout);
+      },
       
     });
   </script>
